--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.version>2.2.3.Final</quarkus.version>
+    <shardingsphere.version>5.0.0-beta</shardingsphere.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -33,6 +34,11 @@
         <version>${quarkus.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.shardingsphere</groupId>
+        <artifactId>shardingsphere-jdbc-core</artifactId>
+        <version>${shardingsphere.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
