--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,10 +1,36 @@
 # H2 DataSource
-quarkus.datasource.ds1.db-kind=h2
-quarkus.datasource.ds1.username=sa
-quarkus.datasource.ds1.jdbc.url=jdbc:h2:tcp://localhost/ds1
+quarkus.datasource.ds.db-kind=h2
+quarkus.datasource.ds.username=sa
+quarkus.datasource.ds.jdbc.url=jdbc:h2:mem:ds
 
-quarkus.datasource.ds2.db-kind=h2
-quarkus.datasource.ds2.username=sa
-quarkus.datasource.ds2.jdbc.url=jdbc:h2:tcp://localhost/ds2
+# ShardingSphere sharding tables
+quarkus.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order_$->{0..1}
+quarkus.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
+quarkus.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=t-order-inline
+quarkus.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+quarkus.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.key-generator-name=snowflake
 
-# Sharding Sphere
+quarkus.shardingsphere.rules.sharding.tables.t_order_item.actual-data-nodes=ds.t_order_item_$->{0..1}
+quarkus.shardingsphere.rules.sharding.tables.t_order_item.table-strategy.standard.sharding-column=order_id
+quarkus.shardingsphere.rules.sharding.tables.t_order_item.table-strategy.standard.sharding-algorithm-name=t-order-item-inline
+quarkus.shardingsphere.rules.sharding.tables.t_order_item.key-generate-strategy.column=order_item_id
+quarkus.shardingsphere.rules.sharding.tables.t_order_item.key-generate-strategy.key-generator-name=snowflake
+
+quarkus.shardingsphere.rules.sharding.tables.t_account.actual-data-nodes=ds.t_account_$->{0..1}
+quarkus.shardingsphere.rules.sharding.tables.t_account.table-strategy.standard.sharding-algorithm-name=t-account-inline
+quarkus.shardingsphere.rules.sharding.tables.t_account.key-generate-strategy.column=account_id
+quarkus.shardingsphere.rules.sharding.tables.t_account.key-generate-strategy.key-generator-name=snowflake
+
+quarkus.shardingsphere.rules.sharding.default-sharding-column=account_id
+quarkus.shardingsphere.rules.sharding.binding-tables=t_order,t_order_item
+quarkus.shardingsphere.rules.sharding.broadcast-tables=t_address
+
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-order-inline.type=INLINE
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-order-inline.props.algorithm-expression=t_order_$->{order_id % 2}
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-order-item-inline.type=INLINE
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-order-item-inline.props.algorithm-expression=t_order_item_$->{order_id % 2}
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-account-inline.type=INLINE
+quarkus.shardingsphere.rules.sharding.sharding-algorithms.t-account-inline.props.algorithm-expression=t_account_$->{account_id % 2}
+
+quarkus.shardingsphere.rules.sharding.key-generators.snowflake.type=SNOWFLAKE
+quarkus.shardingsphere.rules.sharding.key-generators.snowflake.props.worker-id=123
