--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.version>2.3.0.Final</quarkus.version>
+    <antlr.version>4.7.2</antlr.version> <!-- it needs to align with the antlr4-runtime version in shardingsphere -->
     <shardingsphere.version>5.0.0-beta</shardingsphere.version>
   </properties>
   <dependencyManagement>
@@ -40,6 +41,17 @@
         <artifactId>shardingsphere-jdbc-core</artifactId>
         <version>${shardingsphere.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.shardingsphere</groupId>
+        <artifactId>shardingsphere-infra-common</artifactId>
+        <version>${shardingsphere.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-runtime</artifactId>
+        <version>${antlr.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
   <build>
