--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -22,6 +22,10 @@
       <groupId>org.apache.shardingsphere</groupId>
       <artifactId>shardingsphere-jdbc-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.shardingsphere</groupId>
+      <artifactId>shardingsphere-infra-common</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
