update to use ShardingSphereDriver

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -28,7 +28,7 @@
       <version>${project.version}</version>
       <exclusions>
         <exclusion>
-          <groupId>org.codehaus.groovy</groupId>
+          <groupId>org.apache.groovy</groupId>
           <artifactId>groovy</artifactId>
         </exclusion>
       </exclusions>
