--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 # H2 DataSource
 quarkus.datasource.devservices.enabled=false
 
-quarkus.datasource.ds.db-kind=h2
-quarkus.datasource.ds.username=sa
-quarkus.datasource.ds.jdbc.url=jdbc:h2:mem:ds
+quarkus.datasource.ds_0.db-kind=h2
+quarkus.datasource.ds_0.username=sa
+quarkus.datasource.ds_0.jdbc.url=jdbc:h2:mem:ds_0
+
+quarkus.datasource.ds_1.db-kind=h2
+quarkus.datasource.ds_1.username=sa
+quarkus.datasource.ds_1.jdbc.url=jdbc:h2:mem:ds_1
+
+quarkus.datasource.db-kind=shardingsphere
+quarkus.datasource.jdbc.url=jdbc:shardingsphere:classpath:config.yaml
+#quarkus.datasource.jdbc.acquisition-timeout=2H
