Fix #44 to support hibernate orm

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -4,11 +4,15 @@ quarkus.datasource.devservices.enabled=false
 quarkus.datasource.ds_0.db-kind=h2
 quarkus.datasource.ds_0.username=sa
 quarkus.datasource.ds_0.jdbc.url=jdbc:h2:mem:ds_0
+quarkus.datasource.ds_0.jdbc.transactions=DISABLED
 
 quarkus.datasource.ds_1.db-kind=h2
 quarkus.datasource.ds_1.username=sa
 quarkus.datasource.ds_1.jdbc.url=jdbc:h2:mem:ds_1
+quarkus.datasource.ds_1.jdbc.transactions=DISABLED
 
 quarkus.datasource.db-kind=shardingsphere
 quarkus.datasource.jdbc.url=jdbc:shardingsphere:classpath:config.yaml
-#quarkus.datasource.jdbc.acquisition-timeout=2H
+
+quarkus.hibernate-orm.dialect=io.quarkus.hibernate.orm.runtime.dialect.QuarkusH2Dialect
+quarkus.hibernate-orm.database.generation=drop-and-create
