--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -3,12 +3,12 @@ quarkus.datasource.devservices.enabled=false
 
 quarkus.datasource.ds_0.db-kind=h2
 quarkus.datasource.ds_0.username=sa
-quarkus.datasource.ds_0.jdbc.url=jdbc:h2:mem:ds_0
+quarkus.datasource.ds_0.jdbc.url=jdbc:h2:tcp://localhost:9092/~/ds_0
 quarkus.datasource.ds_0.jdbc.transactions=DISABLED
 
 quarkus.datasource.ds_1.db-kind=h2
 quarkus.datasource.ds_1.username=sa
-quarkus.datasource.ds_1.jdbc.url=jdbc:h2:mem:ds_1
+quarkus.datasource.ds_1.jdbc.url=jdbc:h2:tcp://localhost:9092/~/ds_1
 quarkus.datasource.ds_1.jdbc.transactions=DISABLED
 
 quarkus.datasource.db-kind=shardingsphere
@@ -16,3 +16,6 @@ quarkus.datasource.jdbc.url=jdbc:shardingsphere:classpath:config.yaml
 
 quarkus.hibernate-orm.dialect=io.quarkus.hibernate.orm.runtime.dialect.QuarkusH2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.shardingsphere.config-file=config.yaml
+quarkus.native.resources.includes=sql/**,config.yaml
