--- a/integration-tests/src/main/resources/config.yaml
+++ b/integration-tests/src/main/resources/config.yaml
@@ -1,5 +1,12 @@
 databaseName: sharding_db
 
+mode:
+  type: Standalone
+  repository:
+    type: JDBC
+    props:
+      jdbc_url: jdbc:h2:tcp://localhost:9092/mem:test
+
 dataSources:
   ds_0:
     dataSourceClassName: io.quarkiverse.shardingsphere.jdbc.QuarkusDataSource
@@ -7,6 +14,9 @@ dataSources:
   ds_1:
     dataSourceClassName: io.quarkiverse.shardingsphere.jdbc.QuarkusDataSource
     dsName: ds_1
+    
+props:
+  sql-show: true
 
 rules:
   - !SHARDING
