--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>io.quarkiverse.shardingsphere</groupId>
   <artifactId>quarkus-shardingsphere-jdbc-parent</artifactId>
-  <version>999-SNAPSHOT</version>
+  <version>999-SNAPSHOT-1.x</version>
   <packaging>pom</packaging>
   <name>Quarkus - Shardingsphere Jdbc - Parent</name>
   <modules>
