--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.quarkiverse.shardingsphere</groupId>
     <artifactId>quarkus-shardingsphere-jdbc-parent</artifactId>
-    <version>999-SNAPSHOT-1.x</version>
+    <version>1.x-999-SNAPSHOT</version>
   </parent>
   <artifactId>quarkus-shardingsphere-jdbc-integration-tests</artifactId>
   <name>Quarkus - Shardingsphere Jdbc - Integration Tests</name>
