io.quarkus.hibernate.orm.runtime.dialect.QuarkusH2Dialect has been removed

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -14,5 +14,5 @@ quarkus.datasource.ds_1.jdbc.transactions=DISABLED
 quarkus.datasource.db-kind=shardingsphere
 quarkus.datasource.jdbc.url=jdbc:shardingsphere:classpath:config.yaml
 
-quarkus.hibernate-orm.dialect=io.quarkus.hibernate.orm.runtime.dialect.QuarkusH2Dialect
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
