--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <module>runtime</module>
   </modules>
   <scm>
-    <connection>:git:git@github.com:quarkiverse/quarkus-shardingsphere-jdbc.git</connection>
+    <connection>scm:git:git@github.com:quarkiverse/quarkus-shardingsphere-jdbc.git</connection>
     <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-shardingsphere-jdbc.git</developerConnection>
     <url>https://github.com/quarkiverse/quarkus-shardingsphere-jdbc</url>
   </scm>
