--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,5 +1,5 @@
 name: quarkus-shardingsphere-jdbc
-title: Quarkus Shardingsphere JDBC
+title: Shardingsphere JDBC
 version: dev
 nav:
   - modules/ROOT/nav.adoc
