Exclude org.apache.shardingsphere:shardingsphere-infra-expr-espresso

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -25,6 +25,10 @@
           <groupId>org.slf4j</groupId>
           <artifactId>*</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.shardingsphere</groupId>
+          <artifactId>shardingsphere-infra-expr-espresso</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
