--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
     <quarkus.version>3.13.3</quarkus.version>
     <antlr.version>4.10.1</antlr.version>
     <!-- it needs to align with the antlr4-runtime version in shardingsphere -->
-    <snakeyaml.version>1.33</snakeyaml.version>
+    <snakeyaml.version>2.2</snakeyaml.version>
     <!-- it needs to align with the snakeyaml version in shardingsphere -->
-    <shardingsphere.version>5.4.1</shardingsphere.version>
+    <shardingsphere.version>5.5.0</shardingsphere.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -46,7 +46,7 @@
       </dependency>
       <dependency>
         <groupId>org.apache.shardingsphere</groupId>
-        <artifactId>shardingsphere-jdbc-core</artifactId>
+        <artifactId>shardingsphere-jdbc</artifactId>
         <version>${shardingsphere.version}</version>
       </dependency>
       <dependency>
